@@ -1,3 +1,9 @@
+yandex-tracker-client (2.2)
+
+  * COMMONPY-297 change api for getting issue by unique
+
+ -- Vladimir Koljasinskij <smosker@yandex-team.ru>  Thu, 07 Sep 2021 13:44:00 +0300
+
 yandex-tracker-client (2.1)
 
   * fix case when local field slug == global field slug
